--- a/applications/movie-fun-app/src/main/resources/application.yml
+++ b/applications/movie-fun-app/src/main/resources/application.yml
@@ -16,6 +16,7 @@ logging.level:
   org.superbiz.moviefun: DEBUG
 
 s3:
-  accessKey: <access key id>
-  secretKey: <secret access key>
-  bucketName: <name of the bucket>
+  endpointUrl: http://127.0.0.1:9000
+  accessKey: KLXYTPXA113A293TPMIB
+  secretKey: cGfn8Xqy/dmeGp/+iABevG5ZsF+TLm7LDtNVpO9W
+  bucketName: moviefun
