--- a/applications/album-service/src/main/resources/application.yml
+++ b/applications/album-service/src/main/resources/application.yml
@@ -1,20 +1,17 @@
+server.port: 8083
+
 spring:
   jpa:
     generate-ddl: true
     properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 
   datasource:
-    url: jdbc:mysql://localhost:3306/movies?useSSL=false
+    url: jdbc:mysql://localhost:3306/albums?useSSL=false
     username: root
-
-  mvc.view:
-    prefix: /WEB-INF/
-    suffix: .jsp
 
 logging.level:
   root: WARN
   org.superbiz.moviefun: DEBUG
-
 s3:
   endpointUrl: http://127.0.0.1:9000
   accessKey: KLXYTPXA113A293TPMIB
